Table: fix flickering of table settings icon
This partially reverts 1179821b07b2ae6e59db55d3917bab3e67276f39.

Using scrollbars.fix is necessary to prevent flickering. The problem of
that function is, that it uses scout.graphics.offsetBounds which has 2
drawbacks:
1. It is not exact. This is the reason why the settings icon sometimes
is too large.
2. It uses jquery.offset() which is different to
getBoundingClientRect().top because it adds pageYOffset which in case of
IE and 125% zoom is 1. Reason: the desktop height may be fractional
(e.g. 677.6) but the navigation height not because our layout always
rounds the values up (see scout.graphics.getSize).

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/TableHeader.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/TableHeader.less
@@ -33,12 +33,6 @@
   z-index: 1;
   height: 100%;
 
-  /* Do not use 100%, to avoid a render problem in Internet Explorer */
-  /* where IE paints the menu-icon over the border-bottom of the table-header */
-  &.ie {
-    height: 98%; 
-  }
-
   & > .menubar {
     height: 100%;
     background-color: transparent;
